# VulnApp

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/www/: mall.html  miniapp.html  pay.html
app/src/main/cpp/: CMakeLists.txt  mochat.cpp  obfuscation.h
app/src/main/res/drawable/: bg_balance_card.xml  bg_chip_rounded.xml  bg_input.xml  bg_row.xml  bg_warning.xml  ic_chains.xml  ic_chat.xml  ic_info.xml  ic_launcher_foreground.xml  ic_mall.xml  ic_profile.xml  ic_shield.xml  ic_wallet.xml
app/src/main/res/layout/: activity_main.xml  fragment_chain_detail.xml  fragment_chain_list.xml  fragment_chat.xml  fragment_mall.xml  fragment_profile.xml  fragment_wallet.xml  item_chain.xml  item_chat.xml  item_product.xml  row_info.xml
app/src/main/res/menu/: bottom_nav.xml
docker/: Dockerfile  build.sh
docs/: samsung-vuln-patterns.md
docs/chains/: README.md  chain-01.md  chain-02.md  chain-03.md  chain-04.md  chain-05.md  chain-06.md  chain-07.md  chain-08.md  chain-09.md  chain-10.md
gradle/: libs.versions.toml
tools/attacker-app/src/main/: MoChatAttacker.java  README.md
tools/exploits/adb/: chain-01-sqli-oracle-pay.sh  chain-02-pii-exfil.sh  chain-03-webview-rce.sh  chain-05-intent-redirect.sh  chain-06-token-broadcast.sh  chain-08-backup-extract.sh
tools/exploits/drozer/: drozer-recon.md
tools/exploits/frida/: chain-04-dump-messenger.js  chain-08-dump-obf.js  chain-10-bypass-all.js
(+55 files in other folders)
